Fix concert log on mobile

--- a/css/links.css
+++ b/css/links.css
@@ -183,6 +183,10 @@ div.concert {
         z-index: 0;
         position: relative;
     }
+
+    div.concert {
+        margin-top: auto !important;
+    }
     
     div.postbox:nth-child(odd) div.post {
         margin: 70% 0 40px 10% !important;
@@ -236,6 +240,26 @@ div.concert {
     body {
         padding-bottom: 0px;
     }
+
+    iframe.concert, video.concert {
+        width: 100%;
+        float: none;
+        margin: auto !important;
+    }
+
+    video.concert {
+        height: auto;
+    }
+    
+    video.concert-vertical {
+        width: 50%;
+        height: auto;
+        float: none !important;
+        margin: auto !important;
+        left: auto;
+        text-align: center;
+    }
+    
 }
 
 .title-bar {
